# dshub

./: .editorconfig  .eslintrc.js  .gitignore  .impeccable.md  BUILDING.md  CLAUDE.md  DEPLOYMENT-PM2.md  FIXES_SUMMARY.md  LICENSE  PROTOCOL.md  QUICK_START.md  README.md  build.sh  deploy-pm2.bat  deploy-pm2.sh  ecosystem.config.js  package-lock.json  package.json  start.sh  tsconfig.json  tsconfig.server.json  update-pm2.bat  update-pm2.sh
.github/workflows/: build.yml
aur/: .SRCINFO  MAINTAINER_GUIDE.md  PKGBUILD  README.md  config.env  devicemon-web-emulator-bin  devicemon-web-emulator.service  devicemon-web-server  devicemon-web.desktop  devicemon-web.install  devicemon-web.service  dshub-emulator-bin  dshub-emulator.service  dshub-server  dshub.desktop  dshub.install  dshub.service
aur-bin/: .SRCINFO  PKGBUILD  README.md
aur/devicemon-web/: FETCH_HEAD  config  packed-refs
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/public/maps/: boardtypes.map  cnc_parameters.map  cnc_registers.map  cnc_system_registers.map  parameters.map  registers.map  system_registers.map
client/src/: App.tsx  appThemes.ts  index.css  theme.ts  vite-env.d.ts
client/src/components/: AboutPanel.tsx  AutoScanManager.tsx  LogsPanel.tsx  (+22 more)
emulator/: README.md  devicemon_emulator.py  dshub_emulator.py  run_emulator.bat  run_emulator.sh
scripts/: make_gif.sh  record_showcase.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  communicator.rs  lib.rs  scanner.rs  types.rs
src/server/: index.ts
src/shared/: types.ts
(+79 files in other folders)
