[package]
name = "dshub"
version = "0.2.2"
description = "DSHub Device Monitor"
authors = ["Sofian Jafar <skjafar@gmail.com>"]
license = "MIT"
repository = "https://github.com/skjafar/dshub"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
rfd = "0.15"
if-addrs = "0.13"
